--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       DB_HOST: db
       DB_PORT: ${DB_PORT}
       DB_NAME: ${DB_NAME}
+      JWT_SECRET: ${JWT_SECRET}
     depends_on:
       - db
     command: npm run dev
