--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./backend
 
       - name: Run Postman collection
         run: npm run test:postman
+        working-directory: ./backend
