--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -22,6 +22,13 @@ jobs:
         run: npm ci
         working-directory: ./backend
 
+      - name: Start backend server
+        run: npm run dev &
+        working-directory: ./backend
+
+      - name: Wait for backend
+        run: sleep 5  
+
       - name: Run Postman collection
         run: npm run test:postman
         working-directory: ./backend
