--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -1,9 +1,9 @@
-name: Postman API Tests
+name: Postman Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
 
 jobs:
   postman-tests:
@@ -17,17 +17,19 @@ jobs:
     services:
       postgres:
         image: postgres:15
+        # Dummy credentials; real credentials injected at runtime
         env:
-          POSTGRES_USER: ${{ secrets.DB_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASS }}
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_USER: tmpuser
+          POSTGRES_PASSWORD: tmppass
+          POSTGRES_DB: tmpdb
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U ${{ secrets.DB_USER }}"
+          --health-cmd "pg_isready -U tmpuser"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -41,20 +43,28 @@ jobs:
         run: npm ci
         working-directory: ./backend
 
-      - name: Create .env file
+      - name: Wait for Postgres
+        run: sleep 10
+
+      - name: Inject real DB credentials
         run: |
-          echo "DB_USER=${{ secrets.DB_USER }}" >> backend/.env
-          echo "DB_PASS=${{ secrets.DB_PASS }}" >> backend/.env
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> backend/.env
-          echo "DB_PORT=${{ secrets.DB_PORT }}" >> backend/.env
-          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> backend/.env  
+          psql -h localhost -U tmpuser -d tmpdb -c "ALTER USER tmpuser WITH PASSWORD '${DB_PASS}';"
+          psql -h localhost -U tmpuser -d tmpdb -c "ALTER DATABASE tmpdb OWNER TO ${DB_USER};"
+
+      - name: Create .env file for app
+        run: |
+          echo "DB_USER=${DB_USER}" >> backend/.env
+          echo "DB_PASS=${DB_PASS}" >> backend/.env
+          echo "DB_NAME=${DB_NAME}" >> backend/.env
+          echo "DB_PORT=${DB_PORT}" >> backend/.env
+          echo "JWT_SECRET=${JWT_SECRET}" >> backend/.env
 
       - name: Start backend server
         run: npm run dev &
         working-directory: ./backend
 
       - name: Wait for backend
-        run: sleep 5  
+        run: sleep 5
 
       - name: Run Postman collection
         run: npm run test:postman
