--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 /dist
 /.env
 
+# Backend
+/backend/.env
+
 # Frontend
 /frontend/node_modules
 /frontend/.pnp
@@ -38,6 +41,8 @@ yarn-error.log*
 # =====================
 # Root
 /.env
+# Backend
+/backend/.env
 # Frontend
 /frontend/.env.local
 /frontend/.env.development.local
